--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.13.1
 bcrypt==4.1.3
 blinker==1.8.2
 click==8.1.7
@@ -5,15 +6,19 @@ colorama==0.4.6
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
 greenlet==3.0.3
 gunicorn==22.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.0
+pillow==10.3.0
 psycopg2-binary==2.9.9
+pytesseract==0.3.10
 SQLAlchemy==2.0.30
 typing_extensions==4.11.0
 Werkzeug==3.0.3
